<resources>
    <string name="app_name">FinalProject</string>
    <string name="username_placeholder">მომხმარებელი</string>
    <string name="password_placeholder">პაროლი</string>
    <string name="login_button_text">შესვლა</string>
    <string name="background_image_description">background image ¯\_(ツ)_/¯</string>
    <string name="profile_name_title_text">სახელი:</string>
    <string name="profile_name_value_default_text">NAME</string>
    <string name="profile_client_category_title">კლიენტის კატეგორია:</string>
    <string name="profile_sex_title">სქესი:</string>
    <string name="profile_birth_date_title">დაბადების თარიღი:</string>
    <string name="profile_surname_title">გვარი:</string>
    <string name="profile_surname_default_value">SURNAME</string>
    <string name="profile_sec_default_value">SEX</string>
    <string name="profile_birth_date_default_text">BIRTH DATE</string>
    <string name="profile_client_category_default_value">CLIENT CATEGORY</string>
    <string name="profile_phone_number_title">ტელეფონი:</string>
    <string name="profile_address_title">მისამართი:</string>
    <string name="profile_email_title">ელ-ფოსტა:</string>
    <string name="profile_phone_number_default_value">PHONE NUMBER</string>
    <string name="profile_address_default_value">ADDRESS</string>
    <string name="profile_email_default_value">EMAIL</string>
    <string name="cell_active_item_title_default_text">TITLE:</string>
    <string name="cell_active_item_default_amount">AMOUNT</string>
    <string name="cell_active_block_header_default_text">BLOCK HEADER</string>
    <string name="transactions_total_income_default_text">შემოსავალი</string>
    <string name="transactions_total_income_default_value">TOTAL INCOME VALUE</string>
    <string name="transactions_total_outcome_default_text">გასავალი</string>
    <string name="transactions_total_outcome_default_value">TOTAL OUTCOME VALUE</string>
    <string name="transactions_background_description">transactions background</string>
    <string name="lari_logo_description">lari logo :V</string>
    <string name="transaction_logo_stroke_description">just a stoke</string>
    <string name="transaction_date_default_text">TRANSACTION DATE</string>
    <string name="transaction_merchant_default_text">TRANSACTION MERCHANT</string>
    <string name="transaction_type_default_text">TRANSACTION TYPE</string>
    <string name="transaction_currency_default_text">ლარი</string>
    <string name="transaction_change_value_default_text">+3.00</string>
</resources>
