<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_day_ny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_image_description" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_textinput_wrapper"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/password_textinput_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textinput_wrapper"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/username_textinput_wrapper"
        app:layout_constraintStart_toStartOf="@+id/username_textinput_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/username_textinput_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="@+id/password_textinput_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/password_textinput_wrapper" />
</android.support.constraint.ConstraintLayout>